@@ -14,6 +14,14 @@ dependencies {
     implementation 'org.ow2.asm:asm:9.1'
 }
 
+java {
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(17)
+    }
+}
+
 tasks.withType(JavaCompile) {
-    options.compilerArgs << "--enable-preview"
+    options.compilerArgs
+            << "--enable-preview"
+            << "--add-modules=jdk.incubator.foreign"
 }
